@@ -1,3 +1,10 @@
+2009-07-22  Doug Evans  <dje@sebabeach.org>
+
+	* pmacros.scm (-pmacro-builtin-find): New predicate.
+	(pmacros-init!): Add .find.
+	* doc/pmacros.tex: Document .find.
+	* testsuite/pmacros-1.test: Test .find.
+
 2009-07-20  Doug Evans  <dje@sebabeach.org>
 
 	* insn.scm (multi-insn-instantiate!): Use logging messages instead of
